apps/base/cluster-api-operator/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: capi-system
  labels:
    # baseline: the CAPI controllers do not need privileged
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/audit: restricted
---
apiVersion: v1
kind: Namespace
metadata:
  name: capi-operator-system
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/audit: restricted
